--- a/package.json
+++ b/package.json
@@ -43,13 +43,14 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/cors": "^2.8.17",
-    "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/node": "20.17.23",
+    "@types/react": "19.0.10",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.1.5",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
+    "typescript": "5.8.2"
   }
 }
