--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.3",
     "@mui/material": "^6.4.3",
+    "@prisma/client": "^6.5.0",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -23,19 +24,27 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.8.4",
+    "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "firebase": "^11.2.0",
+    "formidable": "^3.5.2",
     "lucide-react": "^0.473.0",
-    "next": "15.1.5",
+    "next": "^15.2.4",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "pg": "^8.14.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-swipeable": "^7.0.2",
+    "sonner": "^2.0.3",
     "swiper": "^11.2.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
@@ -43,9 +52,12 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/cors": "^2.8.17",
+    "@types/formidable": "^3.4.5",
     "@types/node": "20.17.23",
+    "@types/pg": "^8.11.11",
     "@types/react": "19.0.10",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.1.5",
