--- a/package.json
+++ b/package.json
@@ -52,9 +52,10 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/cors": "^2.8.17",
+    "@types/estree": "^1.0.7",
     "@types/formidable": "^3.4.5",
     "@types/node": "20.17.23",
-    "@types/pg": "^8.11.11",
+    "@types/pg": "^8.15.1",
     "@types/react": "19.0.10",
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
