--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "country-state-city": "^3.2.1",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
     "firebase": "^11.2.0",
