--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "debug": "NODE_OPTIONS='--inspect' next dev",
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
@@ -36,8 +37,9 @@
     "firebase": "^11.2.0",
     "formidable": "^3.5.2",
     "lucide-react": "^0.473.0",
-    "next": "^15.2.4",
+    "next": "^15.3.5",
     "next-auth": "^4.24.11",
+    "next-share": "^0.27.0",
     "next-themes": "^0.4.4",
     "pg": "^8.14.1",
     "react": "^19.1.0",
